<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coffeeBack"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/aromaaromaticart434213"
        android:layout_marginTop="0dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopname"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:id="@+id/biztitle"
        android:textColor="@color/coffeeText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/coffeeText"
        android:id="@+id/add1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address2"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/coffeeText"
        android:id="@+id/add2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/phone"
        android:textColor="@color/coffeeText"
        android:id="@+id/phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/description"
        android:textColor="@color/coffeeText"
        android:id="@+id/quote" />

</LinearLayout>